[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kite-framework"
version = "0.1.0"
description = "A lightning-fast, zero-dependency ASGI web framework."
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.urls]
"Homepage" = "https://github.com/biswarupmurmu/kite"
